add lkm3 = lu+lkm2

--- a/.sbclrc
+++ b/.sbclrc
@@ -56,6 +56,7 @@
 (defun lkm () (load "/Users/bobak/lsp/km_2-5-33"))
 ;(defun lkm () (ql 'km))
 (defun lkm2 () (lkm) (load "/Users/bobak/lsp/u2"))
+(defun lkm3 () (lu) (lkm2))
 ;#p"/usr/share/common-lisp/source/" ; #p"/Users/bobak/Documents/downloads/lang/lsp/asdf/registry"
 (defun apr- (s) (apropos s :cl))
 (defun apr (s) (apropos s))
