extended backtrace bte

--- a/.sbclrc
+++ b/.sbclrc
@@ -239,6 +239,8 @@
          collect (cons key value)))  
  
 ;=====
+;(ql 'swank)
+(defun lbt  ()  (load "/Users/bobak/lsp/bt.cl" :print t)) ;instead of:
 #+IGNORE
 (progn ;http://jsnell.iki.fi/blog/archive/2007-12-19-pretty-sbcl-backtraces.html
 (defun backtrace-with-extra-info (&key (start 1) (end 20))
