--- a/.sbclrc
+++ b/.sbclrc
@@ -627,3 +627,15 @@
 
 (defun print-red  (a)  (format t "~c[31m ~a ~c[0m~%"  #\ESC a #\ESC))
 (mapc 'require '(sb-bsd-sockets sb-posix sb-introspect sb-cltl2 asdf)) 
+;http://stackoverflow.com/questions/1511981/how-to-examine-list-of-defined-functions-from-common-lisp-repl-prompt
+(defun get-all-symbols (&optional package)
+  (let ((lst ())
+        (package (find-package package)))
+    (do-all-symbols (s lst)
+      (when (fboundp s)
+        (if package
+            (when (eql (symbol-package s) package)
+              (push s lst))
+            (push s lst))))
+    lst))
+ 
