--- a/.sbclrc
+++ b/.sbclrc
@@ -49,6 +49,7 @@
 #+quicklisp (defun qa (a) (ql:system-apropos  a))
 #+quicklisp (defun qd (a) (ql:who-depends-on  a))
 ;=might try breaking rest out here
+(defun cu- () (compile-file "/home/bobak/lsp/sbclrc.lisp"))
 (load "/home/bobak/lsp/sbclrc")
 ;switched scl&scl- aliases, but s1,s2... isn't loading files now, have to run (l1),(l2)..
 ;I might go to having a fnc in sbclrc that explicitly loads le.lisp, so I can always start w/o it 
