--- a/.sbclrc
+++ b/.sbclrc
@@ -58,3 +58,4 @@
 ;(ql 'cl-cwd)
 ;(defun cwd (p) (cl-cwd:cwd p))
 ;(load "/home/bobak/lsp/ts.cl") ;trivial-shell (tsh str) 
+;(ql 'cl-cwd) (defun pwd () (cl-cwd:get-cwd)) (defun cd (d) (cl-cwd:cwd d)) ;already have it
